# VVLANG

./: .gitignore  .gitmodules  Build.sh  BuildAndRun.sh  CMakeLists.txt  imgui.ini
blocks/: add.json  constant.json  divide.json  mod.json  multiply.json  substract.json
include/core/: deduction_policy.hpp  deduction_type.hpp  graph.hpp  id_pair.hpp  link.hpp  node.hpp  node_draft.hpp  node_draft_parser.hpp  node_type.hpp  slot.hpp  slot_type.hpp  smart_vector.hpp  vector2.hpp
include/render/: viewport.hpp  window.hpp
lib/imgui/: CMakeLists.txt
src/: GUID.cpp  deduction_policy.cpp  graph.cpp  link.cpp  main.cpp  node_draft_parser.cpp  vector2.cpp  viewport.cpp  window.cpp
